[gd_scene load_steps=13 format=2]

[ext_resource path="res://Theme/Fonts/Potra_DFD.tres" type="DynamicFontData" id=1]
[ext_resource path="res://Theme/core_theme.tres" type="Theme" id=2]
[ext_resource path="res://UI/Menus/Menus.gd" type="Script" id=3]
[ext_resource path="res://UI/Menus/TitleMenu.gd" type="Script" id=4]
[ext_resource path="res://UI/Menus/GameMenu.gd" type="Script" id=5]
[ext_resource path="res://Theme/Fonts/Commadore_DFD.tres" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Graphics/GWJ_Info/GWJ_Logo_head.png" type="Texture" id=7]
[ext_resource path="res://Assets/Graphics/ObsLogo/ObsJamLogo.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 132
outline_size = 1
outline_color = Color( 0.580392, 0.568627, 0.960784, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 6 )

[node name="Menus" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleMenu" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
script = ExtResource( 4 )

[node name="VCB" type="VBoxContainer" parent="TitleMenu"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1908.0
margin_bottom = 1068.0

[node name="Main" type="CenterContainer" parent="TitleMenu/VCB"]
margin_right = 1896.0
margin_bottom = 927.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBC" type="VBoxContainer" parent="TitleMenu/VCB/Main"]
margin_left = 640.0
margin_top = 329.0
margin_right = 1255.0
margin_bottom = 597.0

[node name="Title" type="Label" parent="TitleMenu/VCB/Main/VBC"]
margin_right = 615.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.176471, 0.176471, 0.239216, 1 )
text = "NO SPACE"

[node name="PanelContainer" type="PanelContainer" parent="TitleMenu/VCB/Main/VBC"]
margin_top = 161.0
margin_right = 615.0
margin_bottom = 268.0

[node name="Buttons" type="VBoxContainer" parent="TitleMenu/VCB/Main/VBC/PanelContainer"]
margin_left = 203.0
margin_top = 6.0
margin_right = 412.0
margin_bottom = 101.0
size_flags_horizontal = 4
custom_constants/separation = 10

[node name="BTN_Proceed" type="Button" parent="TitleMenu/VCB/Main/VBC/PanelContainer/Buttons"]
margin_right = 209.0
margin_bottom = 25.0
focus_neighbour_left = NodePath("../../../../../AboutArea/BTN_AboutGWJ")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../BTN_Adjustments")
focus_next = NodePath("../BTN_Adjustments")
focus_previous = NodePath(".")
text = "Proceed"

[node name="BTN_Adjustments" type="Button" parent="TitleMenu/VCB/Main/VBC/PanelContainer/Buttons"]
margin_top = 35.0
margin_right = 209.0
margin_bottom = 60.0
focus_neighbour_left = NodePath("../../../../../AboutArea/BTN_AboutGWJ")
focus_neighbour_top = NodePath("../BTN_Proceed")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../BTN_Escape")
focus_next = NodePath("../BTN_Escape")
focus_previous = NodePath("../BTN_Proceed")
text = "Adjustments"

[node name="BTN_Escape" type="Button" parent="TitleMenu/VCB/Main/VBC/PanelContainer/Buttons"]
margin_top = 70.0
margin_right = 209.0
margin_bottom = 95.0
focus_neighbour_left = NodePath("../../../../../AboutArea/BTN_AboutGWJ")
focus_neighbour_top = NodePath("../BTN_Adjustments")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath("../BTN_Adjustments")
text = "Escape"

[node name="AboutArea" type="HBoxContainer" parent="TitleMenu/VCB"]
margin_top = 931.0
margin_right = 1896.0
margin_bottom = 1056.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="BTN_AboutGWJ" type="Button" parent="TitleMenu/VCB/AboutArea"]
margin_right = 125.0
margin_bottom = 125.0
rect_min_size = Vector2( 125, 125 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../Main/VBC/PanelContainer/Buttons/BTN_Proceed")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath("../../Main/VBC/PanelContainer/Buttons/BTN_Proceed")
focus_previous = NodePath("../../Main/VBC/PanelContainer/Buttons/BTN_Proceed")
icon = ExtResource( 7 )
align = 0
expand_icon = true

[node name="Container" type="Container" parent="TitleMenu/VCB/AboutArea"]
margin_left = 129.0
margin_right = 1292.0
margin_bottom = 125.0
size_flags_horizontal = 3

[node name="OBSLogo" type="TextureRect" parent="TitleMenu/VCB/AboutArea"]
margin_left = 1296.0
margin_right = 1896.0
margin_bottom = 125.0
rect_min_size = Vector2( 600, 125 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="GameMenu" type="CenterContainer" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 5 )

[node name="VBC" type="VBoxContainer" parent="GameMenu"]
margin_left = 954.0
margin_top = 526.0
margin_right = 966.0
margin_bottom = 554.0

[node name="PanelContainer" type="PanelContainer" parent="GameMenu/VBC"]
margin_right = 298.0
margin_bottom = 53.0

[node name="MC" type="MarginContainer" parent="GameMenu/VBC/PanelContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 292.0
margin_bottom = 47.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Label" type="Label" parent="GameMenu/VBC/PanelContainer/MC"]
margin_left = 8.0
margin_top = 8.0
margin_right = 278.0
margin_bottom = 33.0
text = "Space Stilled"
align = 1

[node name="MainPanel" type="PanelContainer" parent="GameMenu/VBC"]
margin_top = 57.0
margin_right = 298.0
margin_bottom = 184.0

[node name="MC" type="MarginContainer" parent="GameMenu/VBC/MainPanel"]
margin_left = 6.0
margin_top = 6.0
margin_right = 292.0
margin_bottom = 121.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Buttons" type="VBoxContainer" parent="GameMenu/VBC/MainPanel/MC"]
margin_left = 10.0
margin_top = 10.0
margin_right = 276.0
margin_bottom = 105.0
custom_constants/separation = 10

[node name="BTN_Resume" type="Button" parent="GameMenu/VBC/MainPanel/MC/Buttons"]
margin_right = 266.0
margin_bottom = 25.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../BTN_Adjustments")
focus_next = NodePath("../BTN_Adjustments")
focus_previous = NodePath(".")
text = "Continue Space"

[node name="BTN_Adjustments" type="Button" parent="GameMenu/VBC/MainPanel/MC/Buttons"]
margin_top = 35.0
margin_right = 266.0
margin_bottom = 60.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../BTN_Resume")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../BTN_Escape")
focus_next = NodePath("../BTN_Escape")
focus_previous = NodePath("../BTN_Resume")
text = "Adjustments"

[node name="BTN_Escape" type="Button" parent="GameMenu/VBC/MainPanel/MC/Buttons"]
margin_top = 70.0
margin_right = 266.0
margin_bottom = 95.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../BTN_Adjustments")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath("../BTN_Adjustments")
text = "Escape"

[node name="OptionsMenu" type="CenterContainer" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBC" type="VBoxContainer" parent="OptionsMenu"]
margin_left = 954.0
margin_top = 526.0
margin_right = 966.0
margin_bottom = 554.0

[node name="TitlePanel" type="PanelContainer" parent="OptionsMenu/VBC"]
margin_right = 237.0
margin_bottom = 53.0

[node name="Title" type="MarginContainer" parent="OptionsMenu/VBC/TitlePanel"]
margin_left = 6.0
margin_top = 6.0
margin_right = 231.0
margin_bottom = 47.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Label" type="Label" parent="OptionsMenu/VBC/TitlePanel/Title"]
margin_left = 8.0
margin_top = 8.0
margin_right = 217.0
margin_bottom = 33.0
text = "Adjustments"
align = 1

[node name="MainPanel" type="PanelContainer" parent="OptionsMenu/VBC"]
margin_top = 57.0
margin_right = 237.0
margin_bottom = 173.0

[node name="MC" type="MarginContainer" parent="OptionsMenu/VBC/MainPanel"]
margin_left = 6.0
margin_top = 6.0
margin_right = 231.0
margin_bottom = 110.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Controls" type="VBoxContainer" parent="OptionsMenu/VBC/MainPanel/MC"]
margin_left = 8.0
margin_top = 8.0
margin_right = 217.0
margin_bottom = 96.0

[node name="MainAudio" type="HBoxContainer" parent="OptionsMenu/VBC/MainPanel/MC/Controls"]
margin_right = 209.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="OptionsMenu/VBC/MainPanel/MC/Controls/MainAudio"]
margin_right = 102.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Main:"

[node name="Slider" type="HSlider" parent="OptionsMenu/VBC/MainPanel/MC/Controls/MainAudio"]
margin_left = 106.0
margin_right = 209.0
margin_bottom = 16.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../SFXAudio/Slider")
focus_next = NodePath("../../SFXAudio/Slider")
focus_previous = NodePath(".")
size_flags_horizontal = 3

[node name="SFXAudio" type="HBoxContainer" parent="OptionsMenu/VBC/MainPanel/MC/Controls"]
margin_top = 21.0
margin_right = 209.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="OptionsMenu/VBC/MainPanel/MC/Controls/SFXAudio"]
margin_right = 102.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "SFX:"

[node name="Slider" type="HSlider" parent="OptionsMenu/VBC/MainPanel/MC/Controls/SFXAudio"]
margin_left = 106.0
margin_right = 209.0
margin_bottom = 16.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../MainAudio/Slider")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../MusicAudio/Slider")
focus_next = NodePath("../../MusicAudio/Slider")
focus_previous = NodePath("../../MainAudio/Slider")
size_flags_horizontal = 3

[node name="MusicAudio" type="HBoxContainer" parent="OptionsMenu/VBC/MainPanel/MC/Controls"]
margin_top = 42.0
margin_right = 209.0
margin_bottom = 59.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="OptionsMenu/VBC/MainPanel/MC/Controls/MusicAudio"]
margin_right = 102.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Music:"

[node name="Slider" type="HSlider" parent="OptionsMenu/VBC/MainPanel/MC/Controls/MusicAudio"]
margin_left = 106.0
margin_right = 209.0
margin_bottom = 16.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../SFXAudio/Slider")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../BTN_Back")
focus_next = NodePath("../../BTN_Back")
focus_previous = NodePath("../../SFXAudio/Slider")
size_flags_horizontal = 3

[node name="BTN_Back" type="Button" parent="OptionsMenu/VBC/MainPanel/MC/Controls"]
margin_top = 63.0
margin_right = 209.0
margin_bottom = 88.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../MusicAudio/Slider")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath("../MusicAudio/Slider")
text = "Back"

[connection signal="visibility_changed" from="TitleMenu" to="." method="_on_visibility_changed"]
[connection signal="pressed" from="TitleMenu/VCB/Main/VBC/PanelContainer/Buttons/BTN_Proceed" to="." method="_on_BTN_Proceed_pressed"]
[connection signal="pressed" from="TitleMenu/VCB/Main/VBC/PanelContainer/Buttons/BTN_Adjustments" to="." method="_on_BTN_Adjustments_pressed"]
[connection signal="pressed" from="TitleMenu/VCB/Main/VBC/PanelContainer/Buttons/BTN_Escape" to="." method="_on_BTN_Escape_pressed"]
[connection signal="visibility_changed" from="GameMenu" to="GameMenu" method="_on_visibility_changed"]
[connection signal="pressed" from="GameMenu/VBC/MainPanel/MC/Buttons/BTN_Resume" to="." method="_on_BTN_Resume_pressed"]
[connection signal="pressed" from="GameMenu/VBC/MainPanel/MC/Buttons/BTN_Adjustments" to="." method="_on_BTN_Adjustments_pressed"]
[connection signal="pressed" from="GameMenu/VBC/MainPanel/MC/Buttons/BTN_Escape" to="." method="_on_BTN_Escape_pressed"]
[connection signal="pressed" from="OptionsMenu/VBC/MainPanel/MC/Controls/BTN_Back" to="." method="_on_BTN_Back_pressed"]
